# tivars_lib_py

./: .gitignore  .gitmodules  LICENSE  README.md  __main__.py  build_wiki.py  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  package.yml  publish-wiki.yml  python-package.yml  wiki.yml
examples/: README.md  arrays.py  misc.py  numbers.py  numpy.py  pil.py  programs.py
src/: __main__.py
src/models/: __init__.py  features.py  model.py  models.py
src/tokenizer/: __init__.py  parse.py  tokenizer.py
src/tokenizer/tokens/: DCS8.xml  NoLib.xml  Prizm.xml  TI-73.xml  TI-84+CE.xml  TI-84+CSE.xml  __init__.py
src/vars/: __init__.py  var.py
src/vars/types/: __init__.py  program.py  real.py
tests/: CHARS2.8xp  HELLO.8xp  HELLO2.8xp  __init__.py  __main__.py  appvar.py  array.py  cli.py  file.py  flash.py  gdb.py  group.py  numeric.py  picture.py  pil.py  settings.py  tivars.py  tokenization.py
tests/data/: clibs.8xg
tests/data/json/: func.default.json  param.default.json  param.json  polar.default.json  seq.default.json
tests/data/var/: COLORZ.8xp  CelSheet_CE_5.1.1.0017.8ek  TI83CEBundle_5.4.0.34.b83  TI84CEBundle-5.8.1.12.b84  TI84CEBundle_5.4.0.34.b84  ZLOAD.83P  ti89_2.01_10-13-1999.89u
tivars/: __init__.py  __main__.py  buffer.py  bundle.py  byteview.py  data.py  file.py  flags.py  flash.py  header.py  numeric.py  token.py  trie.py  util.py  var.py
tivars/PIL/: TI8caPlugin.py  TI8ciPlugin.py  TI8xiPlugin.py  __init__.py  common.py
tivars/cli/: __init__.py  convert.py  info.py  pack.py  parser.py
tivars/models/: __init__.py  model.py  versions.py
tivars/tokenizer/: __init__.py  decoder.py  encoder.py  parse.py  state.py  tokens.py
tivars/tokenizer/tokens/: Axe.xml  Grammer.xml  TI-82.xml  __init__.py
tivars/types/: __init__.py  appvar.py  bundle.py  complex.py  exact.py  flash.py  fraction.py  gdb.py  gdb.schema.json  group.py  list.py  matrix.py  numeric.py  picture.py  program.py  real.py  settings.py  tokenized.py  window.py
tivars/types/json/: func.default.json  param.default.json  polar.default.json  seq.default.json
tivars/vars/: __init__.py  var.py
tivars/vars/types/: program.py  real.py
wiki/: Exact-Entries.md  Fraction-Entries.md  Function-GDBs.md  GDB-Components.md  GDB-Entries.md  Home.md  List-Entries.md  Matrix-Entries.md  Numeric-Entries.md  Parametric-GDBs.md  Picture-Entries.md  Polar-GDBs.md  Sequential-GDBs.md  Settings-Entries.md  Tokenized-Entries.md  Var-Files.md  build.py  template.py
wiki/GDBs/: Parametric.md  Polar.md  Sequential.md
