[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tivars*"]

[tool.setuptools.package-data]
"*" = ["*.default.json", "*.xml"]


[project]
name = "tivars"
version = "0.7.2"
description = "A library for interacting with TI-(e)z80 (82/83/84 series) calculator files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/TI-Toolkit/tivars_lib_py"
Documentation = "https://ti-toolkit.github.io/tivars_lib_py/"

[project.optional-dependencies]
images = ["pillow"]
arrays = ["numpy"]
